# gpt-bot

./: .gitignore  Cargo.toml  config.toml.sample
src/: config.rs  discord_client.rs  main.rs
