[package]
name = "gpt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
chatgpt_rs = "1.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
serde = "1"
anyhow = "1"